# good-cheese

./: Makefile  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  db_setup.py  mypy.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 524735005cca_add_government_id_column_to_boleto.py  a607cf06165e_create_file_and_boleto_tables.py
backend/src/: server.py  tasks.py
backend/src/config/: db.py  settings.py
backend/src/models/: __init__.py  boleto.py  boleto_file.py
backend/src/services/: boleto_service.py
backend/tests/: fixtures.py  test_server.py
backend/tests/factories/: boleto_factory.py  boleto_file_factory.py
frontend/: Dockerfile  bun.lockb  index.html  package.json  tsconfig.json  vitest.config.ts
frontend/src/: main.tsx  routes.tsx
frontend/src/components/ui/: file-provider.tsx  file-uploader.tsx  file.tsx  i18n.tsx  index.ts  layout.tsx  no-match.tsx  table.tsx
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en-us.ts  index.ts  pt-br.ts
frontend/src/pages/: home.tsx
frontend/src/pages/boletos/: index.tsx  list.tsx  upload.tsx
frontend/src/pages/boletos/__tests__/: list.spec.tsx
frontend/src/types/: file.ts
